// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast has variants and inlines 1`] = `
<div
  className="toast"
  style={
    Object {
      "--toast-animation-duration": "500ms",
      "--toast-failure-bg": "#FBE7EA",
      "--toast-failure-icon-color": "#5f6163",
      "--toast-failure-title-color": "#c22032",
      "--toast-neutral-bg": "#f1f1f1",
      "--toast-neutral-title-color": "#424242",
      "--toast-success-bg": "#e0edd3",
      "--toast-success-title-color": "#4e7226",
    }
  }
>
  <div
    className="success"
  >
    <div
      className="title"
    >
      Success title
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;

exports[`Toast has variants and inlines 2`] = `
<div
  className="toast"
  style={
    Object {
      "--toast-animation-duration": "500ms",
      "--toast-failure-bg": "#FBE7EA",
      "--toast-failure-icon-color": "#5f6163",
      "--toast-failure-title-color": "#c22032",
      "--toast-neutral-bg": "#f1f1f1",
      "--toast-neutral-title-color": "#424242",
      "--toast-success-bg": "#e0edd3",
      "--toast-success-title-color": "#4e7226",
    }
  }
>
  <div
    className="failure"
  >
    <div
      className="title"
    >
      Failure title
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;

exports[`Toast has variants and inlines 3`] = `
<div
  className="toast toast-inline"
  style={
    Object {
      "--toast-animation-duration": "500ms",
      "--toast-failure-bg": "#FBE7EA",
      "--toast-failure-icon-color": "#5f6163",
      "--toast-failure-title-color": "#c22032",
      "--toast-neutral-bg": "#f1f1f1",
      "--toast-neutral-title-color": "#424242",
      "--toast-success-bg": "#e0edd3",
      "--toast-success-title-color": "#4e7226",
    }
  }
>
  <div
    className="neutral"
  >
    <div
      className="title"
    >
      Inline
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;

exports[`Toast matches snapshot 1`] = `
<div
  className="toast"
  style={
    Object {
      "--toast-animation-duration": "500ms",
      "--toast-failure-bg": "#FBE7EA",
      "--toast-failure-icon-color": "#5f6163",
      "--toast-failure-title-color": "#c22032",
      "--toast-neutral-bg": "#f1f1f1",
      "--toast-neutral-title-color": "#424242",
      "--toast-success-bg": "#e0edd3",
      "--toast-success-title-color": "#4e7226",
    }
  }
>
  <div
    className="neutral"
  >
    <div
      className="title"
    >
      Toast title
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;
